
syntax = "proto3";
option csharp_namespace = "Fynd.Parser.Endpoint.Grpc";
package FyndParser;

service DataExtractor {
rpc Extract(  ExtractRequest) returns ( ExtractResponse);

}

message ExtractRequest {
string html=1;

} 
 

message   ExtractResponse {

bool success=1;
string message=2;

}